# transflow

./: .gitattributes  .gitignore  README.md  pyproject.toml
spikes/page_toolbox_engine_puncture_v1/: .env.example  .gitignore  README.md  pyproject.toml
spikes/page_toolbox_engine_puncture_v1/contracts/: contracts_v1.schema.json  p4_vertical_flow_v1.schema.json  page_run_package_v1.schema.json  toolbox_cadence_v1.schema.json
spikes/page_toolbox_engine_puncture_v1/docs/: 工具箱统一实施节奏执行规范.md
spikes/page_toolbox_engine_puncture_v1/docs/经验/: P11_body.anchored_blocks_新增经验.md  P12_body.flow_text.visual_anchored_新增经验.md  P13_body.chart_新增经验.md  P14_body.diagram_新增经验.md  P15_body.composite.anchored_blocks_chart_新增经验.md  P16_body.composite.chart_table_穿刺经验.md  P17_body.composite.flow_text_chart_新增经验.md  P18_body.composite.flow_text_diagram_新增经验.md  P4_body.flow_text.single_稳定修复与LLM裁决经验.md  P6_body.table_经典场景、踩坑与稳定修复经验.md
spikes/page_toolbox_engine_puncture_v1/docs/计划/: 分类专用工具箱穿刺建设计划.md
spikes/page_toolbox_engine_puncture_v1/fixtures/p1/: S2P0043_contract_fixture.json
spikes/page_toolbox_engine_puncture_v1/prompts/: page_translation.zh-CN.md
spikes/page_toolbox_engine_puncture_v1/scripts/: build_p4_contact_sheets.py  finalize_p5_multi_batch.py  inventory_p4_single_pages.py  materialize_p3_run_audit_package.py  run_p10_end.py  run_p11_anchored_blocks.py  run_p14_diagram.py  run_p1_vertical_slice.py  run_p2_kernel_validation.py  run_p3_body_flow_text_single.py  run_p4_body_flow_text_single_batch.py  run_p5_seeded_case.py  run_p6_body_table.py  run_p7_body_composite_flow_text_table.py  run_p7_full_batch.py  run_p8_contents.py  run_p9_cover.py  scaffold_toolbox.py  validate_p3_run_package.py  validate_toolbox_package.py
spikes/page_toolbox_engine_puncture_v1/src/page_toolbox_puncture/: __init__.py  cli.py  contracts.py  runtime.py  sample_snapshot.py  (+2 more)
spikes/page_toolbox_engine_puncture_v1/tests/: test_p1_runtime.py  test_p2_kernel.py  test_p3_body_flow_text_single.py  test_p4_text_measurement.py  test_p5_anti_overfit.py  test_p5_body_flow_text_multi.py  test_p5_failure_diagnostic.py  test_p5_typography_repair_loop.py  test_p7_body_composite_flow_text_table.py  test_p7_recorded_replay.py  test_p7_renderer_residue.py  test_toolbox_cadence.py
(+5450 files in other folders)
