[build-system]
requires = ["setuptools>=75,<83", "wheel>=0.45,<1"]
build-backend = "setuptools.build_meta"

[project]
name = "transflow-pdf-engine"
version = "0.0.0"
description = "Transflow PDF 翻译排版执行引擎"
readme = "README.md"
requires-python = "==3.14.3"
license = { text = "Proprietary until project license is frozen" }
authors = [{ name = "Transflow contributors" }]
dependencies = [
  "fastapi==0.139.2",
  "httpx==0.28.1",
  "pdfminer.six==20260107",
  "pymupdf==1.28.0",
  "uvicorn==0.51.0",
]

[project.optional-dependencies]
dev = [
  "build==1.5.0",
  "mypy==1.20.2",
  "pytest==9.1.1",
  "pytest-cov==7.1.0",
  "ruff==0.15.22",
]

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = false

[tool.setuptools.packages.find]
where = ["src"]
include = ["transflow*"]

[tool.pytest.ini_options]
minversion = "9.0"
addopts = "-ra --strict-config --strict-markers"
testpaths = ["tests"]
pythonpath = ["src", "."]
markers = [
  "contract: 合同测试",
  "integration: 集成测试",
  "migration: 穿刺迁移等价测试",
  "workflow: 文档工作流测试",
  "regression: 回归测试",
  "fault_injection: 故障注入测试",
  "e2e: 重型完整 PDF 端到端测试，默认快速 Gate 不执行",
]

[tool.coverage.run]
branch = true
source = ["transflow", "scripts"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 85

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = ["B", "E", "F", "I", "RUF", "UP"]
ignore = ["RUF001", "RUF002", "RUF003"]

[tool.ruff.lint.isort]
known-first-party = ["scripts", "transflow"]

[tool.mypy]
python_version = "3.14"
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
exclude = ["spikes/", "transflow-legacy-workflows/", "tmp/"]
