[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "page-toolbox-engine-puncture"
version = "0.1.0"
description = "PDF page toolbox engine puncture"
requires-python = ">=3.11"
dependencies = ["httpx>=0.27"]

[tool.setuptools.packages.find]
where = ["src"]

